--- a/src/components/Cockpit/Cockpit.css
+++ b/src/components/Cockpit/Cockpit.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .purple {
   color: purple;
 }
@@ -14,7 +10,7 @@
   font-weight: bold;
 }
 
-.App button {
+.Cockpit button {
   border: 1px solid blue;
   padding: 16px;
   background-color: green;
@@ -23,16 +19,16 @@
   cursor: pointer;
 }
 
-.App button:hover {
+.Cockpit button:hover {
   background-color: lightgreen;
   color: black;
 }
 
-.App button.Red {
+.Cockpit button.Red {
   background-color: red;
 }
 
-.App button.Red:hover {
+.Cockpit button.Red:hover {
   background-color: salmon;
   color: black;
 }
